# acorntorrent

./: .gitignore  .gitmodules  Cargo.toml  dockerfile  run_lints.fish  run_setup.fish  run_tests.fish  test.torrent
.github/workflows/: integration-tests.yml  lint.yaml  rust.yml  test.yml
dockerfiles/clients/: dockerfile.qbittorrent  dockerfile.rtorrent  dockerfile.transmission
dockerfiles/trackers/: dockerfile.chihaya
docs/: DEV.md
integration_tests/: .gitignore  dockerfile.test-orchestrator  generate_test_data.py  generate_test_matrix.py  pyproject.toml  run_integration_tests.py  run_lints.fish  run_tests.fish
integration_tests/test-scripts/: run_test.py
src/: config.rs  lib.rs  main.rs  metainfo.rs  metainfo_test.rs  state.rs  torrent.rs  tracker.rs  tracker_test.rs  util.rs
src/util/: bencoding.rs  formatting.rs  mod.rs
