[package]
name = "acorntorrent"
version = "0.1.0"
authors = ["snowdrop4"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Crypto
rand = "0.8"
ring = "0.16"

# Bencoding
failure = "0.1" # for error handling
acornbencode = { path = "acornbencode" }
nom = "7.1"

# Network
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
percent-encoding = "2.1"

# Async
tokio = { version = "1.44.2", features = ["macros"] }
chrono = "0.4.40"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[dev-dependencies]
rstest = "0.18"
wiremock = "0.5"
